Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74250

error: function 'isValidNamedForwardReference' declared 'noreturn' should not return

    XMLWordPrintable

Details

    • 662c53dc583188d0278c86f59ab6b80056dbd419 (qt/qtdeclarative/dev)

    Description

      /qtdeclarative/src/3rdparty/masm/yarr/YarrParser.h:198:114: error: function 'isValidNamedForwardReference' declared 'noreturn' should not return
       [-Werror,-Winvalid-noreturn]
       NO_RETURN_DUE_TO_ASSERT bool isValidNamedForwardReference(const String&) { RELEASE_ASSERT_NOT_REACHED(); return false; }
      

      My config.opt

      -developer-build
      -opensource
      -nomake
      examples
      -nomake
      tests
      -opengl
      -confirm-license
      -sanitize
      address
      -platform
      linux-clang
      

      clang version 7.0.0- (trunk)
      Target: x86_64-pc-linux-gnu

      Attachments

        Activity

          People

            yulong.bai Bai Yulong
            yulong.bai Bai Yulong
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: