JSC::Yarr::Parser: fix invalid noreturn warning

Function 'isValidNamedForwardReference' declared 'noreturn' but still returned.
Attribute macro 'NO_RETURN_DUE_TO_ASSERT' is deleted to pass compilation
for GCC and Clang while [-Werror,-Winvalid-noreturn] enabled.

Fixes: QTBUG-74250
Change-Id: I6f7f64ffacf8003f0c695e6a4b9cb422ba57153c
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>